components/Hero/hero.css
.hero-container {
  height: calc(100svh - 80px);
  padding: 0px 100px 0px 100px;
  background-color: #121212;
  display: flex;
  /* scroll-snap-align: center; */
  align-items: center;
  flex-direction: column;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.getStarted {
  display: flex;
  gap: 20px;
  width: 100%;
  align-items: center;
}

.appleDownload {
  cursor: pointer;
  width: 100%;
  border-radius: 5px;
  padding: 0.5rem 0.8rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: azure;
  transition: all 400ms ease-in-out;
}

.appleDownload:hover,
.androidDownload:hover {
  scale: 1.05;
}

.downloadLinks{
  width: 25%;
  text-decoration: none;
}

.androidDownload {
  cursor: pointer;
  justify-content: space-between;
  border-radius: 5px;
  width: 100%;
  padding: 0.5rem 0.8rem;
  display: flex;
  align-items: center;
  background-color: #212121;
  transition: all 400ms ease-in-out;
}

.hero-section {
  height: 100%;
  scroll-snap-align: center;
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.hero-header {
  font-size: 2.5rem;
  /* width: 40%; */
  display: flex;
  flex-direction: column;
  flex: 2;
  gap: 15px;
}

.hero-right {
  flex: 3;
  height: 100%;
  position: relative;
}

.hero-users{
  width: fit-content;
  display: flex;
  color: #a5c9ff;
box-sizing: border-box;

/* border-radius: 15px; */
  justify-content: center;
  align-items: center;

}

.hero-users>span{
 font-size: 1rem;
}


.hero-title {
  letter-spacing: 0.2rem;
}

.hero-desc {
  font-size: 1.2rem;
  line-height: 25px;
  color: #888888;
}


.hero-img {
  position: absolute;
  object-fit: contain;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  margin: auto;
  animation: animate 2s infinite ease alternate;
}

@keyframes animate {
  to {
    transform: translateY(20px)
  }
}

.dwnld-button {
  border: none;
  border-radius: 5px;
  font-weight: bold;
  font-size: 1rem;
}

@media screen and (min-width:800px) and (max-width:1024px)  {
  .hero-right {
    position: relative;
    width: 100%;
  }

  .hero-title {
    font-size: 2.5rem;
  }

  .downloadLinks{
    width: 50%;
    text-decoration: none;
  }
  .hero-desc {
    font-size: 1.2rem;
    line-height: 25px;
    color: #888888;
  }

  .getStarted {
    display: flex;
    justify-content: space-around;
    align-items: center;
  }

  .appleDownload {
    cursor: pointer;
    border-radius: 5px;
    padding: 0.5rem 0.8rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: azure;
  }

  .androidDownload {
    cursor: pointer;
    justify-content: space-between;
    border-radius: 5px;
    padding: 0.5rem 0.8rem;
    display: flex;
    align-items: center;
    background-color: #212121;
  }

  .hero-header {
    width: 100%;
  }

  .hero-img {
    width: 90%;
    height: 100%;
    position: absolute;
    object-fit: contain;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    margin: auto;
    animation: animate 2s infinite ease alternate;
  }

  .dwnld-button {
    z-index: 10;
  }

  .hero-section {
    flex-direction: column;
    height: 100vh;
    justify-content: center;
  }
}

@media screen and (max-width: 800px) {

  .hero-container{
    height: 100svh;
    padding: 20px;
    justify-content: center;
  }
  .hero-right {
    position: relative;
  }

  .hero-users>span{
    font-size: 0.8rem;
   }

  .hero-title {
    font-size: 2rem;
    text-align: center;
  }

  .downloadLinks{
    width: 50%;
    text-decoration: none;
  }
  .hero-desc {
    font-size: 1rem;
    line-height: 25px;
    color: #888888;
  }

  .getStarted {
    display: flex;
    justify-content: space-around;
    align-items: center;
  }

  .appleDownload {
    cursor: pointer;
    border-radius: 5px;
    padding: 0.5rem 0.8rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: azure;
  }

  .androidDownload {
    cursor: pointer;
    justify-content: space-between;
    border-radius: 5px;
    padding: 0.5rem 0.8rem;
    display: flex;
    align-items: center;
    background-color: #212121;
  }

  .hero-header {
    flex: none;
    width: 100%;
  }

  .hero-img {
    width: 90%;
    height: 400px;
    position: absolute;
    object-fit: contain;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    margin: auto;
    animation: animate 2s infinite ease alternate;
  }

  .dwnld-button {
    z-index: 10;
  }

  .hero-section {
    flex-direction: column;
    height: 100vh;
    justify-content: center;
  }
}

